# animalia-econ

./: .gitignore  DATALICENSE.md  LICENSE  Makefile  README.md  deep-research-report-2.md  pyproject.toml  requirements.txt
api/: __init__.py  contracts.py  deploy_lambda.py  export_v1_schemas.py  lambda_handler.py  main.py  observability.py  security.py  service.py
benchmarks/: simulation_realism.py
data/: CHANGELOG.md  README.md
docs/: API_CONTRACT_POLICY.md  API_SERVICE.md  AWS_BEDROCK_SETUP.md  CI.md  DATA_PROVENANCE.md  DATA_SOURCES.md  DEPLOYMENT_ARCHITECTURE.md  LIMITATIONS.md  METHODS.md  PIPELINE_AI.md  README.md  RELEASE_FLOW.md  ROADMAP.md  TAXONOMY_REFRESH.md  VALIDATION.md
examples/: README.md  run_demo.py
pipeline/: README.md  __init__.py  aggregate_taxon_priors.py  apply_overrides.py  build_dataset.py  build_evidence_bundles.py  build_metazoa_phyla.py  build_override_queue.py  build_taxon_dataset.py  build_versioned_priors.py  calibrate_priors_by_clade.py  common.py  expand_species_candidates.py  extract_behavior_literature.py  extract_taxonomy.py  extract_traits.py  fetch_opentree_taxonomy.py  fit_hierarchical_model.py  inherit_species_priors.py  quantify_priors_ai.py  release_dataset.py  render_metazoa_hierarchy.py  render_metazoa_tree.py  validate_processed_outputs.py
prompts/: prior_quantification_prompt.md
schema/: README.md  economic_param_schema.json  task_harmonization.md  taxon_prior_schema.json
sim/: README.md  __init__.py  cli.py  games.py
tests/: README.md  __init__.py  test_api_http.py  test_api_security.py  test_api_service.py  (+6 more)
(+70 files in other folders)
