[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animalia-econ"
version = "0.1.0"
description = "Economic-game priors across Animalia with AI-assisted inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["sim"]
